Bug 1109465 - Fix the interface maps of IMETextTxn and InsertTextTxn; r=smaug a=lsblakk

The original change in bug 1056166 used NS_INTERFACE_MAP_ENTRY_AMBIGUOUS with
the wrong order for argument names.  But more importantly, we cannot use
NS_INTERFACE_MAP_ENTRY_AMBIGUOUS here because the cast from the concrete
class to nsISupports* will remain ambiguous even when casting first through
nsITransaction, so we need to write the implementation without using any
macros.